# reengineer-rust

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: main.rs  net.rs
client/src/dimension/: chunk.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  net.rs
server/src/dimension/: chunk.rs  mod.rs
shared/: Cargo.toml
shared/src/: cbs.rs  lib.rs
shared/src/block/: mod.rs  simple.rs  simple_blocks.rs  state.rs
shared/src/cbs/: block.rs  chunk.rs  mod.rs  pos.rs
shared/src/dimension/: chunk.rs  mod.rs  storage.rs  subchunk.rs
shared/src/dimension/chunk/: mod.rs
shared/src/error/: block.rs  cbs.rs  dimension.rs  mod.rs  net.rs  util.rs
shared/src/net/: mod.rs  packet.rs  packet_data.rs
shared/src/util/: block_pos.rs  chunk_pos.rs  direction.rs  logger.rs  mod.rs  movement.rs  pos.rs
