[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.64"
bevy = "0.9.1"
itertools = "0.10.5"
log = "0.4.17"
log4rs = "1.2.0"
metrohash = "1.0.6"
once_cell = "1.17.0"
server = { version = "0.1.0", path = "../server" }
shared = { path="../shared" }
tokio = { version = "1.24.2",  features = ["full"]}
