[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.64"
bevy = "0.9.1"
concurrent-queue = "2.1.0"
itertools = "0.10.5"
log = "0.4.17"
log4rs = "1.2.0"
metrohash = "1.0.6"
once_cell = "1.17.0"
shared = { path="../shared" }
tokio = { version = "1.24.2",  features = ["full"]}


[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
