[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
bitter = "0.6.1"
chrono = "0.4.23"
glam = "0.22.0"
log = "0.4.17"
log4rs = { version = "1.2.0", features = ["background_rotation", "rolling_file_appender", "console_appender"]}
metrohash = "1.0.6"
once_cell = "1.17.0"
proc_macros = { path = "../proc_macros" }
serde = "1.0.152"
serde_derive = "1.0.152"
tokio = { version = "1.24.2",  features = ["full"]}
uuid = "1.2.2"
